Mon, 21 Jul 2008 23:34:47 +0200 <thp@perli.net>
Updated French translation

	* data/po/fr.po: Updated French translation (by Jerome Chabod)

Mon, 21 Jul 2008 23:33:26 +0200 <thp@perli.net>
Fix problems with command-line mode not working correctly

	* src/gpodder/console.py: Fix problems with new code when using
	"gpodder --run"; thanks to Mykola Nikishov <mn@mn.com.ua> for
	reporting this bug on the Debian Bug Tracker (#491696)

Sun, 20 Jul 2008 10:42:22 +0200 <jerome.chabod@ifrance.com>
Make episodes selector's columns sortable (bug #146)
	* src/gpodder/gui.py: make columns sortable Add a index's column to 
	indentify the currently selected episodes even when sorted. Rewrite 
	get_selected_coumn() to use this index.

Sat, 19 Jul 2008 22:42:42 -0400 <me@nikosapi.org>
Fix random segfaults when syncing
Closes bug #150 (http://bugs.gpodder.org/show_bug.cgi?id=150)

	* src/gpodder/gui.py: Don't make any gui calls from the sync thread
	* src/gpodder/sync.py: add a post-done signal to trigger the finished
	sync callback
	* src/gpodder/trayicon.py: instantiate __sync_progress during
	GPodderStatusIcon __init__ or else you'll get a traceback when
	transfering single episodes

Sat, 19 Jul 2008 20:57:08 -0400 <me@nikosapi.org>
Disable TreeModel cache for channels (Patch from Justin Forest)
Closes feature-request #145 (http://bugs.gpodder.org/show_bug.cgi?id=145)

	* src/gpodder/gui.py: don't update every channel's treemodel when only
	one really needs to be updated
	* src/gpodder/libpodcasts.py: don't cache channel treemodels anymore
	generate a new one everytime podcastChannel.tree_model is requested

Sat, 19 Jul 2008 20:37:10 -0400 <me@nikosapi.org>
Request covers only when necessary (Patch from Justin Forest)
Closes bug #144 (http://bugs.gpodder.org/show_bug.cgi?id=144)

	* src/gpodder/gui.py: Don't update covers every time updateComboBox
	is called
	* src/gpodder/libpodcasts.py: update cover during an update()