@@ -1,3 +1,11 @@
+Tue, 22 Jul 2008 15:01:42 -0400 <me@nikosapi.org>
+Merge patch to close bug #152 (Deleting a channel does not cancel episodes
+downloading from that channel)
+
+	* src/gpodder/gui.py: make on_itemRemoveChannel_activate() cancel
+	any active downloads from the channel being deleted
+	* src/gpodder/services.py: fix some weird indentation
+
 Mon, 21 Jul 2008 23:34:47 +0200 <thp@perli.net>
 Updated French translation
 
